Dec 5,1999
  - Makefile.vc added
Dec 18, 1999
  - changed isA() to className() in generated code (see sim/ChangeLog)
  - macro names in module interface declarations (Interface...End) changed to
    reduce chance of name clashes
Dec 19, 1999
  - changes in generated code due to cPar interface change (see sim/ChangeLog)
Jan 4, 2000
  - corrected '*new cPar = (char *)something' lines in the generated code to
    '*new cPar() = (char *)something', because in the first case, the
    cPar(char *) constructor was called (wrongly) instead of cPar() and
    operator=(char *).
Jan 13, 2000
  - "-s" option (output file suffix) was added
------ omnetpp-2.0b3 released ------
Mar 7, 2000
  - bugfix for distributed execution: corrected handling of machine parameters
    at network level
  - changed test12.ned and test13.ned
Mar 12, 2000
  - added lines to generated code to disable compiler warnings about unused
    vars under MSVC and Borland C++. I have no solution for gcc (gcc doesn't
    seem to have #pragma or any other mechanism to disable warnings from the
    source).
Mar 26, 2000
 - 'char *' --> 'const char *' changes in generated code
Mar 27, 2000
 - bugfix: conditional (?:) operator caused parse error [reported by Niko]
Apr 5, 2000
 - bugfix: nedc hung if last line was a comment and it was incomplete
   (without LF)  [reported by Roland Bless]
Apr 10, 2000
 - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
 - in printf() statements, all "%lf","%lg","%le" was replaced by "%f","%g","%e"
Apr 13, 2000
 - Changed operator precedence to bind ||,&& thighter than ?: [suggested by Niko]
May 7, 2000
 - Makefile.vc improvements [from Balazs Kelemen]
May 22, 2000
 - const-correctness fix on get_expression() arg list [reported by Frank Paehlke]
------ omnetpp-2.0b4 released ------
------ omnetpp-2.0b5 released ------
Sep 30, 2000
 - improvement just for Cygwin: lexer now explicitly ignores '\r' (=CR) chars
Nov 19, 2000
 - ebnf.y updated from GNED (no effect on nedc)