@@ -829,7 +829,7 @@ static const short yycheck[] = {    23,
    322,   433,   358,   403
 };
 /* -*-C-*-  Note some compilers choke on comments on `#line' lines.  */
-#line 3 "/cygnus/cygwin-b20/share/bison.simple"
+#line 3 "/usr/share/bison.simple"
 
 /* Skeleton output parser for bison,
    Copyright (C) 1984, 1989, 1990 Free Software Foundation, Inc.
@@ -1022,7 +1022,7 @@ __yy_memcpy (char *to, char *from, int count)
 #endif
 #endif
 
-#line 196 "/cygnus/cygwin-b20/share/bison.simple"
+#line 196 "/usr/share/bison.simple"
 
 /* The user can define YYPARSE_PARAM as the name of an argument to be passed
    into yyparse.  The argument should have type void *.
@@ -2205,7 +2205,7 @@ case 288:
     break;}
 }
    /* the action file gets copied in in place of this dollarsign */
-#line 498 "/cygnus/cygwin-b20/share/bison.simple"
+#line 498 "/usr/share/bison.simple"
 
   yyvsp -= yylen;
   yyssp -= yylen;
